[tmf-002] gnb 추가하기
- 설정 추가 및 스타일, 상수 값 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,16 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["./src/*"],
+      "@const/*": ["./src/constants/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@mocks/*": ["./apis/mocks/*"],
+      "@apis/*": ["./apis/*"],
+      "@styles/*": ["./src/styles/*"],
+      "@static/*": ["./src/static/*"],
+      "@axios": ["./src/utils/axios"]
+    },
     "target": "es5",
     "lib": [
       "dom",
