--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +17,14 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-query": "^4.0.0",
+    "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.5",
+    "recoil-persist": "^4.2.0"
+  },
+  "devDependencies": {
+    "customize-cra": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
