--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -21,7 +24,8 @@
     "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "recoil": "^0.7.5",
-    "recoil-persist": "^4.2.0"
+    "recoil-persist": "^4.2.0",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "customize-cra": "^1.0.0"
