--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,8 @@
       "@static/*": ["./src/static/*"],
       "@axios": ["./src/utils/axios"]
     },
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "es6",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -31,7 +27,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["**/node_modules"]
 }
