--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@src/*": ["./src/*"],
-      "@const/*": ["./src/constants/*"],
-      "@assets/*": ["./src/assets/*"],
-      "@mocks/*": ["./apis/mocks/*"],
-      "@apis/*": ["./apis/*"],
-      "@styles/*": ["./src/styles/*"],
-      "@static/*": ["./src/static/*"],
-      "@axios": ["./src/utils/axios"]
+      "@src/*": ["src/*"],
+      "@const/*": ["src/constants/*"],
+      "@assets/*": ["src/assets/*"],
+      "@mocks/*": ["apis/mocks/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@apis/*": ["apis/*"],
+      "@styles/*": ["src/styles/*"],
+      "@static/*": ["src/static/*"],
+      "@axios": ["src/utils/axios"]
     },
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
